# mp3lametest

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/mp3lametest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  mp3-lame.cpp  native-lib.cpp  net_iaround_utils_Mp3Lame.h
app/src/main/java/com/example/mp3lametest/: MainActivity.java
app/src/main/java/net/iaround/utils/: Mp3Lame.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/mp3lametest/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
